--- a/app/src/main/res/layout/dialog_open_switchgear_vl.xml
+++ b/app/src/main/res/layout/dialog_open_switchgear_vl.xml
@@ -83,31 +83,43 @@
 
             <include
                 android:id="@+id/content_ory_parameter"
-                layout="@layout/content_layout_ory_parameter_dialog" />
+                layout="@layout/content_layout_ory_parameter_dialog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
 
-            <TextView
-                android:id="@+id/tv_panel_title"
-                style="@style/TextViewStyleContentHomePageSubsection"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginTop="24dp"
-                android:text="@string/panel"
-                android:textColor="#567993" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_panel_content"
-                style="@style/TextViewStyleContentHomePageSection"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="16dp"
-                android:text="34, 52, 53"
-                android:layout_marginBottom="16dp"
-                android:textColor="@color/home_page_gradient"
-                android:textStyle="normal" />
+                <TextView
+                    android:id="@+id/tv_panel_title"
+                    style="@style/TextViewStyleContentHomePageSubsection"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginTop="24dp"
+                    android:text="@string/panel"
+                    android:textColor="#567993" />
+
+                <TextView
+                    android:id="@+id/tv_panel_content"
+                    style="@style/TextViewStyleContentHomePageSection"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="16dp"
+                    android:text="34, 52, 53"
+                    android:layout_marginBottom="16dp"
+                    android:textColor="@color/home_page_gradient"
+                    android:textStyle="normal" />
+
+            </LinearLayout>
+
+
 
             <include
                 android:id="@+id/content_rza"
