--- a/app/src/main/res/layout/content_layout_ory_parameter_dialog.xml
+++ b/app/src/main/res/layout/content_layout_ory_parameter_dialog.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,15 +12,15 @@
 
         <TextView
             android:id="@+id/tv_switch_title"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="24dp"
-            android:textColor="@color/text_recycle_smile"
-            android:layout_height="wrap_content"
             style="@style/TextViewStyleContentHomePageSubsection"
-            android:text="@string/switch_ory_parameter"/>
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
+            android:text="@string/switch_ory_parameter"
+            android:textColor="@color/text_recycle_smile" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_edit_content"
@@ -28,144 +28,174 @@
             android:layout_height="32dp"
             android:layout_gravity="bottom"
             android:layout_marginEnd="16dp"
-            android:tint="#C06C04"
-            android:src="@drawable/baseline_edit_24"/>
+            android:src="@drawable/baseline_edit_24"
+            android:tint="#C06C04" />
 
     </LinearLayout>
 
     <TextView
         android:id="@+id/tv_switch_content"
-        android:layout_width="match_parent"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="40dp"
-        android:textColor="@color/home_page_gradient"
-        android:layout_height="wrap_content"
         style="@style/TextViewStyleContentHomePageSection"
-        android:text="djajjajdajaldjflaj"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
+        android:text="djajjajdajaldjflaj"
+        android:textColor="@color/home_page_gradient" />
 
     <TextView
         android:id="@+id/tv_instr_title"
-        android:layout_width="match_parent"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="24dp"
-        android:textColor="@color/text_recycle_smile"
-        android:layout_height="wrap_content"
         style="@style/TextViewStyleContentHomePageSubsection"
-        android:text="@string/instrument_transformer"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/instrument_transformer"
+        android:textColor="@color/text_recycle_smile" />
 
     <TextView
         android:id="@+id/tv_instr_content"
-        android:layout_width="match_parent"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="40dp"
-        android:textColor="@color/home_page_gradient"
-        android:layout_height="wrap_content"
         style="@style/TextViewStyleContentHomePageSection"
-        android:text="djajjajdajaldjflaj"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
+        android:text="djajjajdajaldjflaj"
+        android:textColor="@color/home_page_gradient" />
 
     <LinearLayout
-        android:id="@+id/layout_shr"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_marginTop="32dp"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/tv_shr1"
-            style="@style/TextViewStyleContent"
-            android:layout_width="48dp"
-            android:layout_marginStart="16dp"
-            android:gravity="center"
-            android:text="@string/shr_1"
-            android:textColor="@color/floatingActionButton"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/iv_shr1"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
-            android:layout_weight="1"
-            android:background="@drawable/background_home_page_search"
-            android:src="@drawable/background_key_1_ory"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize20Percent" />
-
-        <TextView
-            android:id="@+id/tv_shr2"
-            style="@style/TextViewStyleContent"
-            android:layout_width="48dp"
-            android:layout_marginStart="8dp"
-            android:text="@string/shr_2"
-            android:gravity="center"
-            android:textColor="@color/floatingActionButton"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/iv_shr2"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
-            android:layout_weight="1"
-            android:background="@drawable/background_home_page_search"
-            android:layout_marginEnd="20dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/background_key_2_ory"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize20Percent" />
-
-    </LinearLayout>
+        android:layout_height="3dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/background_layout_line_gradient"
+        android:orientation="vertical"/>
 
     <LinearLayout
-        android:id="@+id/layout_lr"
+        android:id="@+id/layout_key"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_dialog_content_key_ory"
         android:orientation="horizontal"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_height="wrap_content">
+        android:paddingHorizontal="16dp"
+        android:paddingBottom="8dp">
 
-        <TextView
-            android:id="@+id/tv_lr"
-            style="@style/TextViewStyleContent"
-            android:layout_width="48dp"
-            android:layout_marginStart="16dp"
-            android:gravity="center"
-            android:text="@string/lr_tr"
-            android:textColor="@color/floatingActionButton"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/iv_lr"
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/background_home_page_search"
-            android:src="@drawable/background_key_1_ory"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize20Percent" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_or"
-            style="@style/TextViewStyleContent"
-            android:layout_width="48dp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:textColor="@color/floatingActionButton"
+            <TextView
+                android:id="@+id/tv_shr1"
+                style="@style/TextViewStyleContent"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:layout_marginBottom="-4dp"
+                android:text="@string/shr_1"
+                android:textColor="@color/floatingActionButton"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/iv_shr1"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:tint="@color/home_page_gradient"
+                android:src="@drawable/background_key_1_ory"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize20Percent" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="@string/or"
-            android:textSize="16sp" />
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/iv_or"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
             android:layout_weight="1"
-            android:background="@drawable/background_home_page_search"
-            android:layout_marginEnd="20dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/background_key_2_ory"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize20Percent" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_shr2"
+                style="@style/TextViewStyleContent"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:text="@string/shr_2"
+                android:layout_marginBottom="-4dp"
+                android:textColor="@color/floatingActionButton"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/iv_shr2"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:tint="@color/home_page_gradient"
+                android:scaleType="centerInside"
+                android:src="@drawable/background_key_2_ory"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize20Percent" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_lr"
+                style="@style/TextViewStyleContent"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:text="@string/lr_tr"
+                android:layout_marginBottom="-4dp"
+                android:textColor="@color/floatingActionButton"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/iv_lr"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:tint="@color/home_page_gradient"
+                android:src="@drawable/background_key_1_ory"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize20Percent" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_or"
+                style="@style/TextViewStyleContent"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:text="@string/or"
+                android:layout_marginBottom="-4dp"
+                android:textColor="@color/floatingActionButton"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/iv_or"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:tint="@color/home_page_gradient"
+                android:scaleType="centerInside"
+                android:src="@drawable/background_key_2_ory"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize20Percent" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
