--- a/app/src/main/res/layout/fragment_open_switchgear_vl.xml
+++ b/app/src/main/res/layout/fragment_open_switchgear_vl.xml
@@ -32,10 +32,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
-        android:paddingTop="4dp"
+        android:paddingBottom="2dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#113853"
+        android:background="#0F334B"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
