--- a/app/src/main/res/layout/item_open_switchgear_vl.xml
+++ b/app/src/main/res/layout/item_open_switchgear_vl.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:paddingBottom="4dp"
+    android:paddingTop="6dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
