--- a/app/src/main/res/drawable/background_item_tr.xml
+++ b/app/src/main/res/drawable/background_item_tr.xml
@@ -3,16 +3,16 @@
     android:shape="rectangle"
     android:thickness="0dp">
     <stroke
-        android:width="0dp"
-        android:color="@color/floatingActionButton" />
+        android:width="1dp"
+        android:color="@color/text_input_assembly" />
     <corners
         android:bottomLeftRadius="20dp"
         android:bottomRightRadius="20dp"
         android:topLeftRadius="20dp"
         android:topRightRadius="20dp" />
     <gradient
-        android:angle="90"
-        android:centerColor="#E8E8E8"
-        android:endColor="#E8E8E8"
-        android:startColor="#E8E8E8" />
+        android:angle="135"
+        android:centerColor="@color/floatingActionButton"
+        android:endColor="#132939"
+        android:startColor="#132939" />
 </shape>
