--- a/app/src/main/res/layout/item_open_switchgear_tr.xml
+++ b/app/src/main/res/layout/item_open_switchgear_tr.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/linearLayout"
     android:orientation="horizontal"
     android:layout_marginHorizontal="8dp"
-    android:layout_marginTop="6dp"
+    android:layout_marginTop="12dp"
     android:layout_marginBottom="2dp"
-    android:background="@drawable/calendar_fragment_kontur_revers"
+    android:background="@drawable/background_item_tr"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -40,7 +41,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-
+android:layout_marginTop="16dp"
+        android:layout_marginBottom="1dp"
+        android:layout_marginEnd="1dp"
         android:background="@drawable/background_item_tr_parameter"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -51,9 +54,10 @@
             android:layout_height="wrap_content"
             style="@style/TextViewStyleContentHomePageSection"
             android:text="ТДНГ"
+            android:textSize="24sp"
             android:paddingStart="16dp"
             android:paddingEnd="8dp"
-            android:paddingTop="8dp"
+            android:paddingTop="16dp"
             android:gravity="start"/>
 
         <TextView
@@ -63,6 +67,8 @@
             style="@style/TextViewStyleContentHomePageSubsection"
             android:text="3*40000/242/121/10,5"
             android:paddingStart="16dp"
+            android:textSize="18sp"
+            android:layout_marginBottom="8dp"
             android:paddingEnd="8dp"
             android:paddingBottom="4dp"
             android:gravity="start"/>
@@ -84,7 +90,7 @@
                 android:paddingEnd="12dp"
                 android:paddingStart="22dp"
                 android:paddingTop="6dp"
-                android:background="@drawable/background_item_open_switchgear_tr_parameter_right"
+                android:background="@drawable/background_item_open_switchgear_tr_parameter_right_2"
                 style="@style/TextViewStyleContent"
                 android:textColor="@color/text_content_rza"
                 android:textSize="16sp"
