--- a/app/src/main/res/layout/item_open_switchgear_tr.xml
+++ b/app/src/main/res/layout/item_open_switchgear_tr.xml
@@ -85,18 +85,18 @@ android:layout_marginTop="16dp"
 
             <TextView
                 android:id="@+id/tv_text_ory"
+                style="@style/TextViewStyleContent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingEnd="12dp"
+                android:background="@drawable/background_item_open_switchgear_tr_parameter_right_2"
                 android:paddingStart="22dp"
                 android:paddingTop="6dp"
-                android:background="@drawable/background_item_open_switchgear_tr_parameter_right_2"
-                style="@style/TextViewStyleContent"
+                android:paddingEnd="12dp"
+                android:paddingBottom="2dp"
+                android:text="  2СШ - 220 яч. 2\n2СШ - 220 яч. 2"
                 android:textColor="@color/text_content_rza"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:paddingBottom="2dp"
-                android:text="  2СШ - 220 яч. 2\n2СШ - 220 яч. 2"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
 
