--- a/app/src/main/res/layout/fragment_open_switchgear_tr.xml
+++ b/app/src/main/res/layout/fragment_open_switchgear_tr.xml
@@ -12,8 +12,8 @@
         android:layout_marginTop="16dp"
         android:gravity="top"
         android:text="@string/tr_name"
-        android:textColor="@color/orange_zero_vision"
-        android:textSize="18sp"
+        android:textColor="@color/text_recycle_smile"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,10 +32,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
-        android:paddingBottom="2dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#1D4058"
+        android:background="#1C3D54"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
