--- a/app/src/main/res/drawable/background_item_electrical_tr.xml
+++ b/app/src/main/res/drawable/background_item_electrical_tr.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle"
     android:thickness="0dp">
     <stroke
-        android:width="1dp"
-        android:color="@color/text_recycle_smile" />
+        android:width="2dp"
+        android:color="@color/home_page_gradient" />
     <corners
         android:bottomLeftRadius="20dp"
         android:bottomRightRadius="20dp"
@@ -12,7 +12,7 @@
         android:topRightRadius="20dp" />
     <gradient
         android:angle="135"
-        android:centerColor="#466B87"
-        android:endColor="#1F425C"
-        android:startColor="#1F425C" />
+        android:centerColor="#19A688"
+        android:endColor="@color/floatingActionButton"
+        android:startColor="@color/home_page_gradient" />
 </shape>
