--- a/app/src/main/res/layout/dialog_open_switchgear_tr.xml
+++ b/app/src/main/res/layout/dialog_open_switchgear_tr.xml
@@ -180,6 +180,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
+                    android:fontFamily="@font/actor"
+                    android:textColor="@color/text_color_dialog_equipment"
                     style="@style/TextViewStyleContentHomePageSubsection"
                     android:text="ajsdlfjalj\nalsdjfljasldj\nalsdjfljasldj\nalsdjfljasldj"
                     android:textSize="20sp"
@@ -198,6 +200,8 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
                     android:paddingBottom="24dp"
+                    android:fontFamily="@font/actor"
+                    android:textColor="@color/text_color_dialog_equipment"
                     style="@style/TextViewStyleContentHomePageSubsection"
                     android:text="ajsdlfjalj\nalsdjfljasldj\nalsdjfljasldj\nalsdjfljasldj"
                     android:textSize="20sp"
