--- a/app/src/main/res/layout/fragment_open_switchgear_tr.xml
+++ b/app/src/main/res/layout/fragment_open_switchgear_tr.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="16dp"
-        android:background="@color/text_input_assembly"
+        android:background="@color/text_recycle_smile"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
@@ -34,7 +34,7 @@
         android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#1C3D54"
+        android:background="#0F334B"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
