--- a/app/src/main/res/layout/fragment_open_switchgear_vl.xml
+++ b/app/src/main/res/layout/fragment_open_switchgear_vl.xml
@@ -35,7 +35,7 @@
         android:paddingBottom="2dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#0F334B"
+        android:background="#0F3148"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
