--- a/app/src/main/res/layout/dialog_equipment_tsn.xml
+++ b/app/src/main/res/layout/dialog_equipment_tsn.xml
@@ -227,7 +227,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="3dp"
-
                     android:background="@drawable/background_layout_line_gradient"
                     android:orientation="vertical" />
 
@@ -244,6 +243,21 @@
                     android:textColor="@color/text_color_dialog_equipment"
                     android:textSize="20sp" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:background="@drawable/background_layout_line_gradient"
+                    android:orientation="vertical" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_power_supply"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="24dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+                    app:spanCount="4"/>
 
             </LinearLayout>
 
