--- a/app/src/main/res/layout/dialog_equipment_tsn.xml
+++ b/app/src/main/res/layout/dialog_equipment_tsn.xml
@@ -87,9 +87,9 @@
                         android:layout_height="wrap_content"
                         style="@style/TextViewStyleContentHomePageSubsection"
                         android:text="10.5/3.15"
-                        android:textStyle="italic"
+                        android:fontFamily="@font/actor"
                         android:layout_gravity="center"
-                        android:textColor="@color/ory_key_background"
+                        android:textColor="@color/text_content_rza"
                         android:paddingStart="16dp"
                         android:textSize="16sp"
 
@@ -287,7 +287,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-                    app:spanCount="4"/>
+                    app:spanCount="3"/>
 
             </LinearLayout>
 
