--- a/app/src/main/res/layout/item_electrical_equipment_tr.xml
+++ b/app/src/main/res/layout/item_electrical_equipment_tr.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout"
-    android:layout_width="wrap_content"
-    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="4dp"
     android:background="@drawable/background_item_electrical_tr"
-    android:layout_height="wrap_content">
+    android:orientation="vertical">
 
     <TextView
+        android:layout_gravity="center"
         android:id="@+id/tv_name"
+        style="@style/TextViewStyleContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:text="T-1"
-        style="@style/TextViewStyleContent"
-        android:textStyle="bold"
         android:textSize="24sp"
-        android:layout_margin="16dp"/>
+        android:textStyle="bold" />
 
 </LinearLayout>
