--- a/app/src/main/res/layout/fragment_tsn_edit.xml
+++ b/app/src/main/res/layout/fragment_tsn_edit.xml
@@ -31,7 +31,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginHorizontal="16dp"
             android:hint="@string/switch_ory_parameter"
-            android:inputType="textMultiLine|textVisiblePassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -44,7 +43,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginHorizontal="16dp"
             android:hint="@string/instrument_transformer"
-            android:inputType="textMultiLine|textVisiblePassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -143,8 +141,7 @@
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
-                    android:hint="@string/cell_number"
-                    android:inputType="textMultiLine"/>
+                    android:hint="@string/cell_number"/>
 
             </LinearLayout>
 
