--- a/app/src/main/res/layout/content_layout_edit_ory_name.xml
+++ b/app/src/main/res/layout/content_layout_edit_ory_name.xml
@@ -21,7 +21,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:hint="@string/name"
-        android:inputType="textMultiLine|textVisiblePassword"
+        android:imeOptions="flagNoEnterAction"
+        android:inputType="textMultiLine|text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -41,9 +42,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:imeOptions="flagNoEnterAction"
         android:layout_marginBottom="16dp"
         android:hint="@string/panel"
-        android:inputType="textMultiLine|textVisiblePassword"
+        android:inputType="textMultiLine|text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
