--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,8 +54,8 @@
 
     <style name="EditTestStyleElectricalEquipment" parent="BaseTextViewStyle">
         <item name="android:background">@drawable/background_edit_text</item>
-        <item name="android:inputType">textMultiLine</item>
-        <item name="android:imeOptions">actionNone</item>
+        <item name="android:inputType">textMultiLine|text</item>
+        <item name="android:imeOptions">flagNoEnterAction</item>
         <item name="android:textSize">19sp</item>
         <item name="android:paddingStart">16dp</item>
         <item name="android:paddingEnd">16dp</item>
